--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "dist/electron/main.js",
   "type": "module",
+  "sideEffects": false,
   "build": {
     "appId": "com.shooot.shooot",
     "productName": "Shooot!",
@@ -46,9 +47,11 @@
     "@babel/preset-react": "^7.25.9",
     "@babel/preset-typescript": "^7.26.0",
     "@chromatic-com/storybook": "^3.2.2",
+    "@emotion/babel-plugin": "^11.13.5",
     "@storybook/addon-essentials": "^8.4.5",
     "@storybook/addon-interactions": "^8.4.5",
     "@storybook/addon-onboarding": "^8.4.5",
+    "@storybook/addon-themes": "^8.4.5",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
     "@storybook/blocks": "^8.4.5",
     "@storybook/react": "^8.4.5",
@@ -60,9 +63,9 @@
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
-    "@vanilla-extract/webpack-plugin": "^2.3.14",
     "babel-loader": "^9.2.1",
     "concurrently": "^9.1.0",
+    "css-loader": "^7.1.2",
     "dayjs": "^1.11.13",
     "electron": "^33.2.0",
     "electron-builder": "^25.1.8",
@@ -85,9 +88,9 @@
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.61.0",
-    "@vanilla-extract/css": "^1.16.0",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
